# proost

./: .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  LICENSE.md  deny.toml  flake.nix  rust-toolchain.toml
elaboration/: Cargo.toml
elaboration/src/: lib.rs
elaboration/src/builder/: level.rs
examples/: irrelevance.mdln
kernel/: Cargo.toml
kernel/src/: lib.rs
kernel/src/axiom/: equality.rs  natural.rs
kernel/src/calculus/: level.rs  term.rs
kernel/src/memory/: arena.rs
kernel/src/memory/declaration/: mod.rs
kernel/src/memory/level/: builder.rs  mod.rs
kernel/src/memory/term/: builder.rs  mod.rs  pretty.rs
mini-proost/: Cargo.toml
mini-proost/examples/: mini-proost.rs
mini-proost/src/: error.rs  evaluator.rs  lib.rs
parser/: Cargo.toml
parser/src/: lib.rs
parser/src/command/: grammar.pest  parse.rs
proost/: Cargo.toml
proost/src/: evaluator.rs  lib.rs  main.rs  rustyline_helper.rs
std/: eq.mdln  nat.mdln
std/prop/: classical.mdln  connectives.mdln  contraposition.mdln
tilleul/: Cargo.toml
tilleul/editors/vscode/: .eslintrc.json  .vscodeignore  README.md  package-lock.json  package.json
tilleul/editors/vscode/src/: extension.ts
tilleul/editors/vscode/syntaxes/: madelaine.tmLanguage.json
tilleul/src/: main.rs
tilleul/src/lsp/: server.rs
tilleul/src/lsp/connection/: stdio.rs  thread.rs
tilleul/src/lsp/dispatcher/: notification.rs  request.rs
tilleul/src/lsp/message/: mod.rs
tilleul/src/tilleul/: handler.rs
