[workspace]
members = [
    "kernel",
    "parser",
    "proost",
    # "tilleul",
    "elaboration"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
bumpalo = "3"
clap = { version = "4", features = ["derive"] }
colored = "2"
# crossbeam-channel = "0.5"
derive_more = "0.99"
env_logger = "0.11"
im-rc = "15"
log = "0.4"
lsp-types = "0.95"
mockall = "0.12"
path-absolutize = "3"
pest = "2"
pest_derive = "2"
rustyline = { version = "14", default-features = false, features = ["custom-bindings"] }
rustyline-derive = "0.10"
serde = "1"
serde_json = "1"

[workspace.package]
authors = [
    "Arthur Adjedj",
    "Augustin Albert",
    "Vincent Lafeychine",
    "Lucas Tabary-Maujean"
]
edition = "2021"
version = "0.3.0"
license = "GPL-3.0-or-later"
repository = "https://gitlab.crans.org/loutr/proost"
