[package]
name = "tilleul"
description = "A LSP server for the simple proof assistant Proost"

edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
parser.path = "../parser"
kernel.path = "../kernel"

anyhow.workspace = true
crossbeam-channel.workspace = true
derive_more.workspace = true
env_logger.workspace = true
log.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
mockall.workspace = true
